collect(toList())の代わりにtoListを使用するよう変更
https://docs.openrewrite.org/recipes/java/migrate/util/replacestreamcollectwithtolist