@@ -3,7 +3,6 @@ package org.dddjava.jig.domain.model.data.term;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 用語集
@@ -13,7 +12,7 @@ public record Glossary(Collection<Term> terms) {
     public List<Term> list() {
         return terms.stream()
                 .sorted(Comparator.comparing(Term::title).thenComparing(term -> term.identifier().asText()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Collection<Term> findRelated(TermIdentifier termIdentifier) {
