@@ -5,7 +5,6 @@ import org.dddjava.jig.domain.model.information.types.JigTypes;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * メソッドの不吉なにおい一覧
@@ -17,12 +16,12 @@ public record MethodSmellList(Collection<MethodSmell> smells) {
                 .flatMap(jigType -> jigType.instanceJigMethodStream()
                         .flatMap(method -> MethodSmell.createMethodSmell(method, jigType).stream())
                 )
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     public List<MethodSmell> list() {
         return smells.stream()
                 .sorted(Comparator.comparing(methodSmell -> methodSmell.method().jigMethodIdentifier().value()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
