@@ -3,7 +3,6 @@ package org.dddjava.jig.domain.model.sources;
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -14,10 +13,10 @@ public record SourceBasePath(Collection<Path> paths) {
     public List<Path> pathList() {
         return paths.stream()
                 .sorted().distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public SourceBasePath merge(SourceBasePath other) {
-        return new SourceBasePath(Stream.concat(paths.stream(), other.paths.stream()).collect(Collectors.toList()));
+        return new SourceBasePath(Stream.concat(paths.stream(), other.paths.stream()).toList());
     }
 }
